--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,16 @@
 <body class="page">
   <div class="page__content">
     <header class="header page__section">
-      <img src="<%=require('./images/logo.svg')%>" alt="Логотип проекта масто" class="logo header__logo">
+      <img src="<%=require('./images/logo.svg')%>" alt="Логотип проекта Место" class="logo header__logo">
     </header>
     <main class="content">
       <section class="profile page__section">
-        <div class="profile__image" style="background-image: url(<%=require('./images/avatar.jpg')%>);"></div>
+        <div class="profile__avatar-container">
+          <div class="profile__image" style="background-image: url(<%=require('./images/avatar.jpg')%>);">
+            <div class="profile__image_overlay"></div>
+            <img src="<%=require('./images/edit-icon.svg')%>" alt="Редактировать аватар" class="profile__image_edit">
+          </div>
+        </div>
         <div class="profile__info">
           <h1 class="profile__title">Жак-Ив Кусто</h1>
           <button class="profile__edit-button" type="button"></button>
@@ -28,28 +33,78 @@
     <footer class="footer page__section">
       <p class="footer__copyright">© 2021 Mesto Russia</p>
     </footer>
+
+    <!-- Модальное окно "Редактировать профиль" -->
     <div class="popup popup_type_edit">
       <div class="popup__content">
         <button type="button" class="popup__close"></button>
         <h3 class="popup__title">Редактировать профиль</h3>
-        <form class="popup__form" name="edit-profile">
-          <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя" required>
-          <input type="text" name="description" class="popup__input popup__input_type_description" placeholder="Занятие" required>
+        <form class="popup__form" name="edit-profile" novalidate>
+          <input type="text" 
+          name="name" 
+          class="popup__input popup__input_type_name" 
+          id="name" 
+          placeholder="Имя" 
+          minlength="2" maxlength="40" 
+          pattern="^[а-яА-ЯёЁa-zA-Z\\-\\s]+$" 
+          data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" 
+          required>
+          <span class="popup__error"></span>
+          <input type="text" 
+          name="description" 
+          class="popup__input popup__input_type_description" 
+          id="description" 
+          placeholder="Занятие"
+          minlength="2" maxlength="200"
+          pattern="^[а-яА-ЯёЁa-zA-Z\\-\\s]+$" 
+          data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" required>
+          <span class="popup__error"></span>
           <button type="submit" class="button popup__button">Сохранить</button>
         </form>
       </div>
     </div>
+
+    <!-- Модальное окно "Новое место" -->
     <div class="popup popup_type_new-card" id="add-card-modal">
       <div class="popup__content">
         <button type="button" class="popup__close"></button>
         <h3 class="popup__title">Новое место</h3>
         <form class="popup__form" name="new-place">
-          <input type="text" name="place-name" class="popup__input popup__input_type_card-name" placeholder="Название" required>
-          <input type="url" name="link" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку" required>
+          <input type="text" name="place-name" class="popup__input popup__input_type_card-name" id="place-name" placeholder="Название" 
+            minlength="2" maxlength="30"
+            pattern="^[а-яА-ЯёЁa-zA-Z\\-\\s]+$"
+            data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" required>
+          <span class="popup__error"></span>
+          <input type="url" name="link" class="popup__input popup__input_type_url" id="link" placeholder="Ссылка на картинку" required>
+          <span class="popup__error"></span>
           <button type="submit" class="button popup__button">Сохранить</button>
         </form>
       </div>
     </div>
+
+    <!-- Модальное окно "Обновить аватар" -->
+    <div class="popup popup_type_avatar">
+      <div class="popup__content">
+        <button type="button" class="popup__close"></button>
+        <h3 class="popup__title">Обновить аватар</h3>
+        <form class="popup__form" name="update-avatar">
+          <input type="url" name="avatar" class="popup__input popup__input_type_url" id="avatar-url" placeholder="Ссылка на аватар" required>
+          <span class="popup__error"></span>
+          <button type="submit" class="button popup__button">Сохранить</button>
+        </form>
+      </div>
+    </div>
+
+    <!-- Модальное окно подтверждения -->
+    <div class="popup popup_type_confirm">
+      <div class="popup__container">
+        <button type="button" class="popup__close-button"></button>
+        <h3 class="popup__title">Вы уверены?</h3>
+        <button type="button" class="popup__submit-button">Да</button>
+      </div>
+    </div>
+
+    <!-- Модальное окно изображения -->
     <div class="popup popup_type_image">
       <div class="popup__content popup__content_content_image">
         <button type="button" class="popup__close"></button>
@@ -57,16 +112,20 @@
         <p class="popup__caption"></p>
       </div>
     </div>
+
+    <template id="card-template">
+      <li class="places__item card">
+        <img class="card__image" src="" alt="" />
+        <button type="button" class="card__delete-button"></button>
+        <div class="card__description">
+          <h2 class="card__title"></h2>
+          <div class="card__like-container">
+            <button type="button" class="card__like-button"></button>
+            <span class="card__like-count">0</span>
+          </div>
+        </div>
+      </li>
+    </template>
   </div>
-  <template id="card-template">
-    <li class="places__item card">
-      <img class="card__image" src="" alt="" />
-      <button type="button" class="card__delete-button"></button>
-      <div class="card__description">
-        <h2 class="card__title"></h2>
-        <button type="button" class="card__like-button"></button>
-      </div>
-    </li>
-  </template>
 </body>
 </html>
